	+ Added YamlMap class for easy working with maps
VC4-Development-0.0.0-186
	+ added test FileOutputHandler
VC4-Development-0.0.0-187
	* Fixed a bug with the FileOutputHandler
VC4-Development-0.0.0-188
	+ PluginLoader can now load plugins
	+ Plugins can now do things on enable and disable
VC4-Development-0.0.0-189
	* Fixed bugs with the plugin loader
VC4-Development-0.0.0-190
	+ BlockRenderDefault now renders blocks
	+ Testing chunk rendering
VC4-Development-0.0.0-191
	+ Added GameStates
VC4-Development-0.0.0-192
	+ Added IBlockMultitexture and BlockMultitexture
VC4-Development-0.0.0-193
	+ Added WorldGenerator interface for world generators
VC4-Development-0.0.0-200
	* Improved BlockRendererDefault
	+ Added crosshairs
VC4-Development-0.0.0-201
	+ Added ingame gui
VC4-Development-0.0.0-202
	+ Block now has method to get creative items
VC4-Development-0.0.0-203
	+ Test infinite world
VC4-Development-0.0.0-205
	* Fixed issues with lwjgl natives
VC4-Development-0.0.0-206
	+ Added interface for half blocks
VC4-Development-0.0.0-207
	+ Added stairs renderer
VC4-Development-0.0.0-208
	* Fixed block renderer bugs
VC4-Development-0.0.0-209
	* Improved item drops
VC4-Development-0.0.0-210
	+ Added gravity test
VC4-Development-0.0.0-211
	+ Items can now be picked up
VC4-Development-0.0.0-212
	+ Reduced memory load
VC4-Development-0.0.0-213
	+ Added movement style enum
VC4-Development-0.0.0-214
	+ Added support for tools
VC4-Development-0.0.0-215
	+ Added cracks
VC4-Development-0.0.0-216
	* Fixed cracks bugs
VC4-Development-0.0.1-218
	+ New Resource Loader
	+ Added Animated Texture Loader (ATL, old one known as STL)
	+ Plugins can have their own resources
VC4-Development-0.0.1-219
	* Fixed meta character bug
VC4-Development-0.0.1-220
	* Language files are now resources
VC4-Development-0.0.1-221
	* Fixed "failed to load texture" bug
VC4-Development-0.0.1-223
	+ Added sound and music support
VC4-Development-0.0.1-224
	+ Worlds can play music based on player position